--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title></head>
 <body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
-<div style="text-align: right;"><br><table style="text-align: left; width: 1105px; height: 59px;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td style="vertical-align: top;"><a href="https://www.facebook.com/N028Games/" target="_blank">facebook</a> - <a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank">youtube</a> - <a href="mailto:info@no28.games">email</a> - <a href="no28.games/about.html" target="_blank">about</a> &nbsp;<br><br></td>
+<div style="text-align: right;"><br><table style="width: 90%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td style="vertical-align: top; text-align: left;"><a href="https://www.facebook.com/N028Games/" target="_blank">facebook</a> - <a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank">youtube</a> - <a href="mailto:info@no28.games">email</a> - <a href="about.html" target="_blank">about</a> &nbsp;<br><br></td>
 <td style="text-align: right; vertical-align: top;"><img style="width: 101px; height: 44px;" alt="logo" src="No28.png"><br><br></td></tr></tbody></table><div style="text-align: center;"><img style="width: 296px; height: 162px;" alt="downscaled" src="IntroLogo.png"><br>
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
