--- a/index.html
+++ b/index.html
@@ -1,13 +1,160 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title></head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
+
+<link href="sakari.css" rel="stylesheet"></head>
 <body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
-<div style="text-align: right;"><br><table style="width: 90%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td style="vertical-align: top; text-align: left;"><a href="https://www.facebook.com/N028Games/" target="_blank">facebook</a> - <a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank">youtube</a> - <a href="mailto:info@no28.games">email</a> - <a href="about.html" target="_blank">about</a> &nbsp;<br><br></td>
-<td style="text-align: right; vertical-align: top;"><img style="width: 101px; height: 44px;" alt="logo" src="No28.png"><br><br></td></tr></tbody></table><div style="text-align: center;"><img style="width: 296px; height: 162px;" alt="downscaled" src="IntroLogo.png"><br>
+<div style="text-align: right;"><br>
+<table style="text-align: left; margin-left: auto; margin-right: auto; height: 59px; width: 90%;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; text-align: left;"><small><a style="font-weight: bold;" href="https://www.facebook.com/N028Games/" target="_blank">facebook</a><span style="font-weight: bold;">
+- </span><a style="font-weight: bold;" href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank">youtube</a><span style="font-weight: bold;"> - </span><a style="font-weight: bold;" href="mailto:info@no28.games">email</a><span style="font-weight: bold;"> - </span><a style="font-weight: bold;" href="about.html" target="_blank">about</a><span style="font-weight: bold;">
+&nbsp;</span></small><br>
+<br>
+</td>
+<td style="text-align: right; vertical-align: top;"><img style="width: 101px; height: 44px;" alt="logo" src="No28.png"><br>
+</td>
+</tr>
+</tbody>
+</table>
+<div style="text-align: center;"><img style="width: 242px; height: 133px;" alt="downscaled" src="IntroLogo.png"><br>
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-<br><a href="ReleaseTrailer.mp4">download</a><br><br><br><table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td><small><span style="font-weight: bold; color: rgb(255, 153, 0);">Short Description</span><br><br>Cargo Breach is an Intense VR Arcade Shooter with Unique Gesture based Weapon Mechanics.<br>You hunt down escaped creatures in dark atmospheric spaceship corridors. All presented in stunning AAA graphics.<br><br style="font-weight: bold; color: rgb(255, 102, 0);"><span style="font-weight: bold; color: rgb(255, 153, 0);">About The Game</span><br><br><span style="font-weight: bold; color: white;">Cargo is Breached! </span><br><br>The Selene is transporting livestock from outer space back to earth for the Food conglomerate S Car Go.<br>Venture into the ship and eradicate all escaped creatures before the ship reaches earth.<br>Cargo Breach is a VR Horror Shooter where you explore dark corridors hunting down escaped creatures.<br>You wield The Modular a device that can rearrange it's buildup to form whatever you need based on how you hold the controllers.<br>Now be a good employee of S Car Go and clean that ship.<br><br><span style="font-weight: bold; color: rgb(255, 153, 0);">Features:</span><br><br></small><div style="margin-left: 40px;"><small>- Gesture based gun mechanics allow you to switch guns by aligning your controllers differently.</small><br><small>For instance hold one behind the other to form the "Shocker".</small><br><br><small>- Various weapon types that each have a different impact on the threats. </small><br><br><small>- Randomized Level creation. Each run will be different, Blasting numerous waves of creatures along the way.</small><br><br><small>- Several enemy types with each their unique attacks and vulnerabilities.</small><br><br><small>- Stunning state of the art, High-end Triple A+ graphics. </small><br><br><small>- Discover how the story enfolds as you play.</small><br><br><small>- Features Steam achievements.</small><br></div><small><br><br><span style="font-weight: bold; color: rgb(255, 153, 0);">Content Rating</span><br><br>PEGI 18+ Gore and Violence<br><br><span style="font-weight: bold; color: rgb(255, 153, 0);">VR Support</span><br><br>HTC Vive<br>Oculus Rift<br>play area: Roomscale<br><br><span style="font-weight: bold; color: rgb(255, 153, 0);">Tech specs</span></small><small><span style="font-weight: bold;"></span><br></small></td></tr></tbody></table><br><table style="width: 70%; height: 1px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td style="vertical-align: top;"><small>MINIMUM:<br>OS: Windows 7 - 64 bit<br>Processor: Intel i5-4590 equivalent or greater<br>Memory: 8 GB RAM<br>Graphics: NVIDIA GTX 970 / AMD equivalent or greater<br>DirectX: Version 11<br>Storage: 1500 MB available space<br>Sound Card: Integrated<br>Additional Notes: VR Headset required, 2x USB 3.0 ports</small></td><td style="vertical-align: top;"><small>RECOMMENDED:<br>OS: Windows 10<br>Processor: Intel Core i7 6700K equivalent or greater<br>Memory: 16 GB RAM<br>Graphics: NVIDIA GTX 980 / AMD equivalent or greater<br>DirectX: Version 12<br>Storage: 1500 MB available space<br>Sound Card: Integrated<br>Additional Notes: VR Headset required, 2x USB 3.0 ports<br><br></small></td></tr></tbody></table><br>
-<br><span style="font-weight: bold; color: rgb(255, 153, 0);">Screens</span><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%201.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%202.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Ludor.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%203.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%204.png"><br><br><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%206.png"><br><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%208.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%209.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2010.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2011.png"><br><br><img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2012.png"><br><br>all right reserved No. 28 Games 2017<br><br><br>
+<br>
+<a style="font-weight: bold;" href="ReleaseTrailer.mp4">- download video</a> -<br>
+<br>
+<br>
+<table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td><small><span style="font-weight: bold; color: rgb(255, 153, 0);">Short
+Description</span><br>
+<br>
+Cargo Breach is an Intense VR Arcade Shooter with Unique Gesture based
+Weapon Mechanics.<br>
+You hunt down escaped creatures in dark atmospheric spaceship
+corridors. All presented in stunning AAA graphics.<br>
+<br style="font-weight: bold; color: rgb(255, 102, 0);">
+<span style="font-weight: bold; color: rgb(255, 153, 0);">About
+The Game</span><br>
+<br>
+<span style="font-weight: bold; color: white;">Cargo
+is Breached! </span><br>
+<br>
+The Selene is transporting livestock from outer space back to earth for
+the Food conglomerate S Car Go.<br>
+Venture into the ship and eradicate all escaped creatures before the
+ship reaches earth.<br>
+Cargo Breach is a VR Horror Shooter where you explore dark corridors
+hunting down escaped creatures.<br>
+You wield The Modular a device that can rearrange it's buildup to form
+whatever you need based on how you hold the controllers.<br>
+Now be a good employee of S Car Go and clean that ship.<br>
+<br>
+<span style="font-weight: bold; color: rgb(255, 153, 0);">Features:</span><br>
+<br>
+</small>
+<div style="margin-left: 40px;"><small>-
+Gesture based gun mechanics allow you to switch guns by aligning your
+controllers differently.</small><br>
+<small>For instance hold one behind the other to form the
+"Shocker".</small><br>
+<br>
+<small>- Various weapon types that each have a different
+impact on the threats. </small><br>
+<br>
+<small>- Randomized Level creation. Each run will be
+different, Blasting numerous waves of creatures along the way.</small><br>
+<br>
+<small>- Several enemy types with each their unique attacks
+and vulnerabilities.</small><br>
+<br>
+<small>- Stunning state of the art, High-end Triple A+
+graphics. </small><br>
+<br>
+<small>- Discover how the story enfolds as you play.</small><br>
+<br>
+<small>- Features Steam achievements.</small><br>
+</div>
+<small><br>
+<br>
+<span style="font-weight: bold; color: rgb(255, 153, 0);">Content
+Rating</span><br>
+<br>
+PEGI 18+ Gore and Violence<br>
+<br>
+<span style="font-weight: bold; color: rgb(255, 153, 0);">VR
+Support</span><br>
+<br>
+HTC Vive<br>
+Oculus Rift<br>
+play area: Roomscale<br>
+<br>
+<span style="font-weight: bold; color: rgb(255, 153, 0);">Tech
+specs</span></small><small><span style="font-weight: bold;"></span><br>
+</small></td>
+</tr>
+</tbody>
+</table>
+<br>
+<table style="width: 70%; height: 1px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top;"><small>MINIMUM:<br>
+OS: Windows 7 - 64 bit<br>
+Processor: Intel i5-4590 equivalent or greater<br>
+Memory: 8 GB RAM<br>
+Graphics: NVIDIA GTX 970 / AMD equivalent or greater<br>
+DirectX: Version 11<br>
+Storage: 1500 MB available space<br>
+Sound Card: Integrated<br>
+Additional Notes: VR Headset required, 2x USB 3.0 ports</small></td>
+<td style="vertical-align: top;"><small>RECOMMENDED:<br>
+OS: Windows 10<br>
+Processor: Intel Core i7 6700K equivalent or greater<br>
+Memory: 16 GB RAM<br>
+Graphics: NVIDIA GTX 980 / AMD equivalent or greater<br>
+DirectX: Version 12<br>
+Storage: 1500 MB available space<br>
+Sound Card: Integrated<br>
+Additional Notes: VR Headset required, 2x USB 3.0 ports<br>
+<br>
+</small></td>
+</tr>
+</tbody>
+</table>
+<br>
+<br>
+<span style="font-weight: bold; color: rgb(255, 153, 0);">Screens</span><br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%201.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%202.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Ludor.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%203.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%204.png"><br>
+<br>
+<br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%206.png"><br>
+<br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%208.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%209.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2010.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2011.png"><br>
+<br>
+<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2012.png"><br>
+<br><small>
+all right reserved No. 28 Games 2017</small><br>
+<br>
+<br>
 </div>
 <br>
 <br>
