--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
 <br>
-<a style="font-weight: bold;" href="ReleaseTrailer.mp4">- download video</a> -<br>
+<a style="font-weight: bold;" href="ReleaseTrailer.mp4">- download video -</a><br>
 <br>
 <br>
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
