--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </tr>
 </tbody>
 </table>
-<div style="text-align: center;"><img style="width: 242px; height: 133px;" alt="downscaled" src="IntroLogo.png"><br>
+<div style="text-align: center;"><br>
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
 <br>
@@ -38,7 +38,7 @@ corridors. All presented in stunning AAA graphics.<br>
 <br style="font-weight: bold; color: rgb(255, 102, 0);">
 <span style="font-weight: bold; color: rgb(255, 153, 0);">About
 The Game</span><br>
-<br>
+</small><br><small>
 <span style="font-weight: bold; color: white;">Cargo
 is Breached! </span><br>
 <br>
@@ -64,7 +64,7 @@ controllers differently.</small><br>
 <small>- Various weapon types that each have a different
 impact on the threats. </small><br>
 <br>
-<small>- Randomized Level creation. Each run will be
+<small>- Randomized Level creation. Each</small><small> run will be
 different, Blasting numerous waves of creatures along the way.</small><br>
 <br>
 <small>- Several enemy types with each their unique attacks
@@ -77,7 +77,7 @@ graphics. </small><br>
 <br>
 <small>- Features Steam achievements.</small><br>
 </div>
-<small><br>
+<br><small>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Content
 Rating</span><br>
@@ -92,8 +92,7 @@ Oculus Rift<br>
 play area: Roomscale<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Tech
-specs</span></small><small><span style="font-weight: bold;"></span><br>
-</small></td>
+specs</span></small></td>
 </tr>
 </tbody>
 </table>
@@ -124,7 +123,7 @@ Additional Notes: VR Headset required, 2x USB 3.0 ports<br>
 </tr>
 </tbody>
 </table>
-<br>
+<br><br><img style="width: 242px; height: 133px;" alt="downscaled" src="IntroLogo.png"><br><br><br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Screens</span><br>
 <img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%201.png"><br>
