--- a/about.html
+++ b/about.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title></head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
+
+<link href="sakari.css" rel="stylesheet">
+</head>
 <body style="background-attachment: fixed; color: white; background-color: rgb(6, 6, 6); background-image: url(Background.jpg);" background-position="center" background-repeat="no-repeat" background-attachment="fixed" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
-<div style="text-align: right;"><br><br>
-<div style="text-align: center;"><table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td><div style="text-align: center;"><small><span style="font-weight: bold; color: rgb(255, 153, 0);"><img style="width: 101px; height: 44px;" alt="Logo" src="No28.png"></span></small><br><small><span style="font-weight: bold; color: rgb(255, 153, 0);"></span></small></div><small><span style="font-weight: bold; color: rgb(255, 153, 0);">About us</span><br><br>No.
+<div style="text-align: right;"><br>
+<br>
+<div style="text-align: center;">
+<table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td>
+<div style="text-align: center;"><small><span style="font-weight: bold; color: rgb(255, 153, 0);"><img style="width: 101px; height: 44px;" alt="Logo" src="No28.png"></span></small><br>
+<small><span style="font-weight: bold; color: rgb(255, 153, 0);"></span></small></div>
+<small><span style="font-weight: bold; color: rgb(255, 153, 0);">About us</span><br>
+<br>
+No.
 28 Games is a brand formed by three independent game developers. Pepijn
 Rijnders (Sakari Games), Jeroen Van Raevels (Studio RAEF) and Bop
 Mommers (809Software). Besides some client work for VR the team has
 mainly worked on PC and Mobile games. Although the team members
-released other titles on steam Cargo Breach is their official debut
-title. <br><br>The name N0. 28 is based on the popular manga Akira.
+released other titles on steam Cargo Breach is No 28 Games' official debut
+title. <br>
+<br>
+The name N0. 28 is based on the popular manga Akira.
 Akira is a boy that was part of an experiment and got the number 28
-assigned to him.<br><br><span style="font-weight: bold;"><span style="color: rgb(255, 153, 0);">contact</span><br></span><br>no28.games<br>info@no28.games</small></td></tr></tbody></table><br><small>all right reserved No. 28 Games 2017</small><br><br>
+assigned to him.<br>
+<br>
+<span style="font-weight: bold;"><span style="color: rgb(255, 153, 0);">contact</span><br>
+</span><br>
+no28.games<br>
+info@no28.games</small></td>
+</tr>
+</tbody>
+</table>
+<br>
+<small>all right reserved No. 28 Games 2017</small><br>
+<br>
 </div>
 <br>
 <br>
