--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
 
-<link href="sakari.css" rel="stylesheet"></head>
+<link href="sakari.css" rel="stylesheet">
+</head>
 <body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
 <div style="text-align: right;"><br>
-<table style="text-align: left; margin-left: auto; margin-right: auto; height: 59px; width: 90%;" border="0" cellpadding="2" cellspacing="2">
+<table style="width: 70%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; text-align: left;"><small><a style="font-weight: bold;" href="https://www.facebook.com/N028Games/" target="_blank">facebook</a><span style="font-weight: bold;">
-- </span><a style="font-weight: bold;" href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank">youtube</a><span style="font-weight: bold;"> - </span><a style="font-weight: bold;" href="mailto:info@no28.games">email</a><span style="font-weight: bold;"> - </span><a style="font-weight: bold;" href="about.html" target="_blank">about</a><span style="font-weight: bold;">
+<td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="about.html"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="about" title="about" src="About.png"></a><span style="font-weight: bold;">
 &nbsp;</span></small><br>
 <br>
 </td>
@@ -22,7 +22,8 @@
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
 <br>
-<a style="font-weight: bold;" href="ReleaseTrailer.mp4">- download video -</a><br>
+<a style="font-weight: bold;" href="ReleaseTrailer.mp4">-
+download video -</a><br>
 <br>
 <br>
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
@@ -38,8 +39,8 @@ corridors. All presented in stunning AAA graphics.<br>
 <br style="font-weight: bold; color: rgb(255, 102, 0);">
 <span style="font-weight: bold; color: rgb(255, 153, 0);">About
 The Game</span><br>
-</small><br><small>
-<span style="font-weight: bold; color: white;">Cargo
+</small><br>
+<small><span style="font-weight: bold; color: white;">Cargo
 is Breached! </span><br>
 <br>
 The Selene is transporting livestock from outer space back to earth for
@@ -64,7 +65,8 @@ controllers differently.</small><br>
 <small>- Various weapon types that each have a different
 impact on the threats. </small><br>
 <br>
-<small>- Randomized Level creation. Each</small><small> run will be
+<small>- Randomized Level creation. Each</small><small>
+run will be
 different, Blasting numerous waves of creatures along the way.</small><br>
 <br>
 <small>- Several enemy types with each their unique attacks
@@ -77,8 +79,8 @@ graphics. </small><br>
 <br>
 <small>- Features Steam achievements.</small><br>
 </div>
-<br><small>
 <br>
+<small><br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Content
 Rating</span><br>
 <br>
@@ -123,7 +125,11 @@ Additional Notes: VR Headset required, 2x USB 3.0 ports<br>
 </tr>
 </tbody>
 </table>
-<br><br><img style="width: 242px; height: 133px;" alt="downscaled" src="IntroLogo.png"><br><br><br>
+<br>
+<br>
+<img style="width: 242px; height: 133px;" alt="downscaled" src="IntroLogo.png"><br>
+<br>
+<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Screens</span><br>
 <img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%201.png"><br>
@@ -150,8 +156,8 @@ Additional Notes: VR Headset required, 2x USB 3.0 ports<br>
 <img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2011.png"><br>
 <br>
 <img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2012.png"><br>
-<br><small>
-all right reserved No. 28 Games 2017</small><br>
+<br>
+<small>all right reserved No. 28 Games 2017</small><br>
 <br>
 <br>
 </div>
