--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
 <div style="text-align: center;">
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
+<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-96x96.png" sizes="96x96">
 <tr>
 <td>
 <div style="text-align: center;"><small><span style="font-weight: bold; color: rgb(255, 153, 0);"><img style="width: 101px; height: 44px;" alt="Logo" src="No28.png"></span></small><br>
@@ -21,7 +24,8 @@ No.
 Rijnders (Sakari Games), Jeroen Van Raevels (Studio RAEF) and Bop
 Mommers (809Software). Besides some client work for VR the team has
 mainly worked on PC and Mobile games. Although the team members
-released other titles on steam Cargo Breach is No 28 Games' official debut
+released other titles on steam Cargo Breach is No 28 Games' official
+debut
 title. <br>
 <br>
 The name N0. 28 is based on the popular manga Akira.
