--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <div style="text-align: right;"><br>
 <table style="width: 70%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
+<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-96x96.png" sizes="96x96">
 <tr>
 <td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="about.html"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="about" title="about" src="About.png"></a><span style="font-weight: bold;">
 &nbsp;</span></small><br>
