--- a/about.html
+++ b/about.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
-
-<link href="sakari.css" rel="stylesheet">
-</head>
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png"><link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png">
+<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128">
+<meta name="application-name" content="&nbsp;">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="msapplication-TileImage" content="mstile-144x144.png">
+<meta name="msapplication-square70x70logo" content="mstile-70x70.png">
+<meta name="msapplication-square150x150logo" content="mstile-150x150.png">
+<meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
+<meta name="msapplication-square310x310logo" content="mstile-310x310.png">
+<title></title></head>
 <body style="background-attachment: fixed; color: white; background-color: rgb(6, 6, 6); background-image: url(Background.jpg);" background-position="center" background-repeat="no-repeat" background-attachment="fixed" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
 <div style="text-align: right;"><br>
 <br>
 <div style="text-align: center;">
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
-<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-96x96.png" sizes="96x96">
 <tr>
 <td>
 <div style="text-align: center;"><small><span style="font-weight: bold; color: rgb(255, 153, 0);"><img style="width: 101px; height: 44px;" alt="Logo" src="No28.png"></span></small><br>
