--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
 
 <link href="sakari.css" rel="stylesheet">
+<link rel="icon" type="image/png"><link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png"><link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png">
+<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128">
+<meta name="application-name" content="&nbsp;">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="msapplication-TileImage" content="mstile-144x144.png">
+<meta name="msapplication-square70x70logo" content="mstile-70x70.png">
+<meta name="msapplication-square150x150logo" content="mstile-150x150.png">
+<meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
+<meta name="msapplication-square310x310logo" content="mstile-310x310.png">
 </head>
 <body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
 <div style="text-align: right;"><br>
 <table style="width: 70%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
-<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="https://no28games.github.io/favicon-96x96.png" sizes="96x96">
 <tr>
 <td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="about.html"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="about" title="about" src="About.png"></a><span style="font-weight: bold;">
 &nbsp;</span></small><br>
