--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png"><link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
+<html><head><title>No 28 Games</title>
+
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -19,7 +21,8 @@
 <meta name="msapplication-square150x150logo" content="mstile-150x150.png">
 <meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
 <meta name="msapplication-square310x310logo" content="mstile-310x310.png">
-<title></title></head>
+<link href="sakari.css" rel="stylesheet">
+</head>
 <body style="background-attachment: fixed; color: white; background-color: rgb(6, 6, 6); background-image: url(Background.jpg);" background-position="center" background-repeat="no-repeat" background-attachment="fixed" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
 <div style="text-align: right;"><br>
 <br>
@@ -34,8 +37,9 @@
 <br>
 No.
 28 Games is a brand formed by three independent game developers. Pepijn
-Rijnders (Sakari Games), Jeroen Van Raevels (Studio RAEF) and Bop
-Mommers (809Software). Besides some client work for VR the team has
+Rijnders (<a style="font-weight: bold;" href="http://www.sakarigames.com">Sakari Games</a>),
+Jeroen Van Raevels (<a style="font-weight: bold;" href="http://raef.be">Studio RAEF</a>) and Bop
+Mommers (<a href="http://www.809software.nl/"><span style="font-weight: bold;">809Software</span></a>). Besides some client work for VR the team has
 mainly worked on PC and Mobile games. Although the team members
 released other titles on steam Cargo Breach is No 28 Games' official
 debut
