--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 <br>
 No.
 28 Games is a brand formed by three independent game developers. Pepijn
-Rijnders (<a style="font-weight: bold;" href="http://www.sakarigames.com">Sakari Games</a>),
+Rijnders (<a style="font-weight: bold;" href="www.sakarigames.com">Sakari Games</a>),
 Jeroen Van Raevels (<a style="font-weight: bold;" href="http://raef.be">Studio RAEF</a>) and Bop
 Mommers (<a href="http://www.809software.nl/"><span style="font-weight: bold;">809Software</span></a>). Besides some client work for VR the team has
 mainly worked on PC and Mobile games. Although the team members
