--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
 
 <link href="sakari.css" rel="stylesheet">
-<link rel="icon" type="image/png"><link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png"><link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
+<link rel="icon" type="image/png">
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png">
@@ -40,10 +42,8 @@
 <div style="text-align: center;"><br>
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-<br>
-<a style="font-weight: bold;" href="ReleaseTrailer.mp4">-
-download video -</a><br>
-<br>
+<br><br>
+<iframe src="http://store.steampowered.com/widget/722040/" frameborder="0" height="190" width="646"></iframe>
 <br>
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
@@ -69,8 +69,7 @@ ship reaches earth.<br>
 Cargo Breach is a VR Horror Shooter where you explore dark corridors
 hunting down escaped creatures.<br>
 You wield The Modular a device that can rearrange it's buildup to form
-whatever you need based on how you hold the controllers.<br>
-Now be a good employee of S Car Go and clean that ship.<br>
+whatever you need based on how you hold the controllers. Now be a good employee of S Car Go and clean that ship.<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Features:</span><br>
 <br>
