--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
       <video preload="metadata" autoplay loop id="my-video">
         <source src="videos/backgroundvid.mp4" type="video/mp4">
-        <source src="videos/mov_bbb.ogg" type="video/ogg">
+        <source src="videos/backgroundvid.ogg" type="video/ogg">
       </video>
     </div>
 		<div class="thinline">
