--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
 <div id="navbar">
-		<a href="http://store.steampowered.com/app/722040/Cargo_Breach/">BUY NOW</a>
+		<a href="http://store.steampowered.com/app/722040/Cargo_Breach/" target="_blank">BUY NOW</a>
 </div>
 
   <main>
